--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 	<link rel="icon" type="image/png" href="/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
     
-	<title>React App</title>
+	<title>Product store</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
